# forge

./: .gitignore  AGENTS.md  CARGO_TEST_SUCCESS_REPORT.md  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  DEMO_REMOVAL_COMPLETE.md  DESIGN.md  ONBOARDING.md  PRODUCT.md  README.md  REFACTORING_REPORT.md  RENAME_PLAN.md  STATIC_ANALYSIS_REPORT.md  TUI_INTEGRATION_COMPLETE_NO_DEMO.md  TUI_TESTING_VERIFICATION.md  V0.100.0_MVP_VERIFICATION.md  V0.150.0_IMPLEMENTATION_REPORT.md  V0.190.0_PAIN_POINTS.md  V0.190.0_RELEASE.md  VERIFICATION_REQUIRED.md  clippy_output.txt  docs.md  forge.toml  rust-toolchain.toml
.github/workflows/: ci-failure-fixer.yml  ci.yml  issue-to-branch.yml  pr-description.yml  pr-review.yml
.omo/run-continuation/: ses_13136a1baffe6TZR026eK7VUx7.json
agents/: Cargo.toml
agents/src/: lib.rs  orchestrator.rs  traits.rs  types.rs
context/: Cargo.toml
context/queries/: cpp.scm  go.scm  java.scm  javascript.scm  python.scm  rust.scm  typescript.scm
context/src/: agents.rs  engine.rs  graph.rs  lang.rs  lib.rs  retrieval.rs  symbols.rs  vector.rs
docs/: SHARED_CONTRACT_v0.170-v0.180.md
docs/providers/: zai.md
docs/superpowers/plans/: 2025-06-12-v0.190.0-ext.md  2026-06-12-zai-provider.md
docs/superpowers/specs/: 2026-06-12-zai-provider-design.md
ext/: Cargo.toml
ext/src/: lib.rs
ext/src/acp/: handlers.rs  mod.rs  protocol.rs  server.rs  transport.rs
ext/src/hooks/: mod.rs  registry.rs  types.rs
ext/src/mcp/: client.rs  handlers.rs  mod.rs  oauth.rs  protocol.rs  server.rs  server_process.rs  transport.rs
ext/src/observability/: metrics.rs  mod.rs  span.rs  trace_log.rs
ext/src/plugins/: loader.rs  mod.rs  registry.rs  types.rs
ext/src/skills/: discovery.rs  mod.rs  registry.rs  types.rs
ext/tests/: ponytail_install.rs
ext/tests/fixtures/plugins/ponytail/: forge-plugin.toml
forge-agents/: Cargo.toml
forge-agents/src/: lib.rs  orchestrator.rs  types.rs
forge-cli/: Cargo.toml
forge-cli/src/: doctor.rs  exec.rs  main.rs  mcp.rs  plain.rs  release_check.rs  serve.rs
forge-context/: Cargo.toml
forge-context/src/: agents.rs  lib.rs
forge-core/: Cargo.toml
forge-core/src/: checkpoint.rs  event_loop.rs  file_watcher.rs  lib.rs
forge-core/src/tests/: integration_test.rs
forge-ext/: Cargo.toml
forge-ext/src/: lib.rs
forge-ext/src/hooks/: registry.rs
forge-ext/src/mcp/: client.rs  mod.rs  server.rs  server_process.rs  transport.rs
forge-ext/src/observability/: metrics.rs  span.rs  trace_log.rs
forge-ext/src/skills/: mod.rs
forge-provider/: Cargo.toml
forge-provider/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  traits.rs
forge-sandbox/: Cargo.toml
forge-tui/: Cargo.toml  DELIVERABLE.md  README.md  TUI_ANALYSIS.md
forge-tui/src/: app.rs  command_palette.rs  lib.rs  panels.rs  simple_tui.rs
forge-tui/src/panels/: agent_panel.rs  checkpoint_banner.rs  conversation.rs  diff_viewer.rs  input.rs  status_bar.rs
forge-verify/: Cargo.toml
forge-verify/src/: checkpoint_store.rs  lib.rs  verifier.rs
provider/: Cargo.toml
provider/src/: anthropic.rs  catalog.rs  gemini.rs  lib.rs  local.rs  mock.rs  openai.rs  traits.rs  types.rs
sandbox/: Cargo.toml
sandbox/src/: lib.rs
verify/: Cargo.toml
verify/src/: checkpoint_store.rs  lib.rs  verifier.rs
