[package]
name = "agents"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

# TODO: v0.170.0 - Add agent orchestration dependencies
