[package]
name = "context"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

# Tree-sitter for parsing (pinned exact versions for reproducibility)
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.4"
tree-sitter-python = "=0.20.4"
tree-sitter-javascript = "=0.20.4"
tree-sitter-typescript = "=0.20.5"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
walkdir = "2"



[dev-dependencies]
tempfile = { workspace = true }
