[package]
name = "ext"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
urlencoding = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
