[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-provider = { path = "../forge-provider" }
forge-context = { path = "../forge-context" }
forge-sandbox = { path = "../forge-sandbox" }
forge-verify = { path = "../forge-verify" }
forge-agents = { path = "../forge-agents" }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "forge"
path = "src/main.rs"
