[package]
name = "forge-ext"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
