[package]
name = "forge-verify"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
forge-agents = { path = "../forge-agents" }
serde_json = "1.0"
async-trait = "0.1"
