[package]
name = "verify"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
agents = { path = "../agents" }
forge-core = { path = "../forge-core" }
serde = { workspace = true }
toml = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }


